[tool.poetry]
name = "pycast-recorder"
version = "0.1.0"
description = ""
authors = ["Jono Hill <jonathan@hillnz.com>"]

[tool.poetry.dependencies]
python = "^3.7"
"ruamel.yaml" = "^0.16.0"
lxml = "^4.3"
aiohttp = "^3.5"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
rope = "^0.18.0"
autopep8 = "^1.5.4"
isort = "^5.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
