[tool.poetry]
name = "pycast-recorder"
version = "0.1.0"
description = ""
authors = ["Jono Hill <jonathan@hillnz.com>"]

[tool.poetry.dependencies]
python = "^3.7"
"ruamel.yaml" = "^0.17.0"
lxml = "^4.3"
aiohttp = "^3.5"
pydantic = "^1.7.3"

[tool.poetry.dev-dependencies]
pylint = "^2.3"
rope = "^0.23.0"
autopep8 = "^1.5.4"
isort = "^5.7.0"
pytest = "^6.2.2"
anyio = "^3.0.0"
debugpy = "^1.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
